--- a/Vagrantfile.erb
+++ b/Vagrantfile.erb
@@ -85,6 +85,7 @@ Vagrant.configure("2") do |c|
     su - testuser -c "/usr/bin/ssh-keygen -f ~testuser/.ssh/id_rsa -b 4096 -t rsa -q -N '' -C 'foo@bar.de'"
     su - testuser -c "cp  ~testuser/.ssh/id_rsa.pub ~testuser/.ssh/authorized_keys"
     passwd --unlock testuser
+    locale-gen de_DE.UTF-8 || true
     EOF
  end
 
