--- a/Vagrantfile.erb
+++ b/Vagrantfile.erb
@@ -82,9 +82,11 @@ Vagrant.configure("2") do |c|
     mkdir -pv /opt/chef/embedded/bin/
     ln -snf /usr/bin/ruby /opt/chef/embedded/bin/
     useradd -m testuser -s /usr/local/bin/auditshell
+    usermod --password=x testuser
+    passwd --unlock testuser
     su - testuser -c "/usr/bin/ssh-keygen -f ~testuser/.ssh/id_rsa -b 4096 -t rsa -q -N '' -C 'foo@bar.de'"
     su - testuser -c "cp  ~testuser/.ssh/id_rsa.pub ~testuser/.ssh/authorized_keys"
-    passwd --unlock testuser
+    su - testuser -c "ssh -o StrictHostKeyChecking=no localhost uptime"
     locale-gen de_DE.UTF-8 || true
     EOF
  end
